--- a/package.json
+++ b/package.json
@@ -73,7 +73,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/IlanMoyal/moyal.js.error"
+    "url": "git+https://github.com/IlanMoyal/moyal.js.error.git"
   },
   "keywords": []
 }
