--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "x-moyal-auto-generated-comment": "THIS IS AN AUTO_GENERATED FILE. DON'T EDIT IT! INSTEAD EDIT build/package.template.jsonc and project.settings.jsonc",
   "name": "@moyal/js-error",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "A modern, extensible JavaScript error class with native cause support, recursive serialization, full stack tracing, and developer-friendly utilities. Designed for structured logging and forward-compatible error handling in modern applications.",
   "type": "module",
+  "types": "./dist/types/moyal.error.d.ts",
+  "sideEffects": false,
   "main": "./dist/moyal.error.cjs.js",
   "module": "./dist/moyal.error.mjs",
   "browser": "./dist/moyal.error.umd.js",
@@ -14,6 +16,8 @@
   "author": "Ilan Moyal",
   "license": "MIT",
   "scripts": {
+    "types": "node ./scripts/generate-ts.js",
+    "validate:has-commits": "node ./scripts/validate-has-commits.js",
     "validate:clean": "node ./scripts/validate-clean.js",
     "sync:package": "node ./scripts/sync-package.js",
     "sync:back-to-project-settings": "node ./scripts/sync-back-to-project-settings.js",
@@ -42,8 +46,8 @@
     "postinstall": "npm run sync:back",
     "clean": "node ./scripts/clean.js",
     "prebuild": "npm run sync && npm run check",
-    "build": "npm run clean && node ./scripts/build.js",
-    "prepack": "npm run build && npm run docs",
+    "build": "npm run clean && npm run types && node ./scripts/build.js",
+    "prepack": "npm run validate:clean && npm run build && npm run docs",
     "pack:local": "npm run publish:switch && bash ./scripts/pack-local.sh && node ./scripts/publish-switch.js restore",
     "pack:preview": "bash ./scripts/pack-preview.sh",
     "pack": "npm run pack:local && npm run pack:preview",
@@ -53,9 +57,14 @@
     "publish:npm": "npm run validate:logged-in && npm run publish:switch && npm publish --access public && node ./scripts/publish-switch.js restore",
     "release": "npm run validate:logged-in && npm run build && npm run version:release && npm run publish:npm"
   },
+  "dependencies": {
+    "@moyal/js-type": "^1.0.3"
+  },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
     "@rollup/plugin-terser": "^0.4.3",
+    "@rollup/plugin-commonjs": "^28.0.3",
+    "@rollup/plugin-node-resolve": "^16.0.1",
     "chokidar": "^4.0.3",
     "comment-json": "^4.2.5",
     "eslint": "^9.25.0",
@@ -64,7 +73,8 @@
     "jsdoc-to-markdown": "^9.1.1",
     "rollup": "^3.0.0",
     "docdash": "^2.0.2",
-    "@moyal/js-test": "^2.1.8"
+    "@moyal/js-test": "^2.1.8",
+    "typescript": "^5.8.3"
   },
   "files": [
     "./dist/",
